src/main/gen/recaf/antlr/RecafParser.java
// Generated from RecafParser.g4 by ANTLR 4.13.2
package recaf.antlr;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue", "this-escape"})
public class RecafParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		BOOL_LITERAL=1, STRING_LITERAL=2, INT_LITERAL=3, PROGRAM=4, BEGIN=5, END=6, 
		FUNCTION=7, PROCEDURE=8, EXTERNAL=9, FORWARD=10, IF=11, THEN=12, ELSE=13, 
		FOR=14, TO=15, DOWNTO=16, WHILE=17, REPEAT=18, UNTIL=19, DO=20, CONST=21, 
		TYPE=22, VAR=23, ARRAY=24, RECORD=25, OF=26, DIV=27, MOD=28, AND=29, OR=30, 
		NOT=31, ID=32, LPAREN=33, RPAREN=34, LBRACK=35, RBRACK=36, SEMICOLON=37, 
		ASSIGN=38, COLON=39, COMMA=40, ELLIPSIS=41, RANGE=42, DOT=43, CARET=44, 
		PLUS=45, MINUS=46, TIMES=47, EQUALS=48, LEQ=49, GEQ=50, NEQ=51, LT=52, 
		GT=53, PASCAL_BRACE_COMMENT=54, PASCAL_PAREN_COMMENT=55, WHITESPACE=56, 
		ERROR=57;
	public static final int
		RULE_program = 0, RULE_program_decl = 1, RULE_declaration = 2, RULE_type_section = 3, 
		RULE_type_decl = 4, RULE_type_ref = 5, RULE_base_type = 6, RULE_array_type = 7, 
		RULE_array_index_range = 8, RULE_record_type = 9, RULE_enum_type = 10, 
		RULE_pointer_type = 11, RULE_const_section = 12, RULE_const_decl = 13, 
		RULE_var_section = 14, RULE_var_decls = 15, RULE_var_decl = 16, RULE_id_list = 17, 
		RULE_function_decl = 18, RULE_procedure_decl = 19, RULE_formal_params = 20, 
		RULE_param_decls = 21, RULE_routine_block = 22, RULE_local_declaration = 23, 
		RULE_main_block = 24, RULE_block = 25, RULE_statement_list = 26, RULE_statement = 27, 
		RULE_assign_statement = 28, RULE_method_call_statement = 29, RULE_method_call = 30, 
		RULE_args = 31, RULE_arg = 32, RULE_location = 33, RULE_location_access = 34, 
		RULE_indexer = 35, RULE_field_selector = 36, RULE_deref_selector = 37, 
		RULE_expr = 38, RULE_mul_op = 39, RULE_add_op = 40, RULE_rel_op = 41, 
		RULE_literal = 42, RULE_if_else = 43, RULE_for_loop = 44, RULE_while_loop = 45, 
		RULE_repeat_loop = 46;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "program_decl", "declaration", "type_section", "type_decl", 
			"type_ref", "base_type", "array_type", "array_index_range", "record_type", 
			"enum_type", "pointer_type", "const_section", "const_decl", "var_section", 
			"var_decls", "var_decl", "id_list", "function_decl", "procedure_decl", 
			"formal_params", "param_decls", "routine_block", "local_declaration", 
			"main_block", "block", "statement_list", "statement", "assign_statement", 
			"method_call_statement", "method_call", "args", "arg", "location", "location_access", 
			"indexer", "field_selector", "deref_selector", "expr", "mul_op", "add_op", 
			"rel_op", "literal", "if_else", "for_loop", "while_loop", "repeat_loop"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, null, null, "'program'", "'begin'", "'end'", "'function'", 
			"'procedure'", "'external'", "'forward'", "'if'", "'then'", "'else'", 
			"'for'", "'to'", "'downto'", "'while'", "'repeat'", "'until'", "'do'", 
			"'const'", "'type'", "'var'", "'array'", "'record'", "'of'", "'div'", 
			"'mod'", "'and'", "'or'", "'not'", null, "'('", "')'", "'['", "']'", 
			"';'", "':='", "':'", "','", "'...'", "'..'", "'.'", "'^'", "'+'", "'-'", 
			"'*'", "'='", "'<='", "'>='", "'<>'", "'<'", "'>'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "BOOL_LITERAL", "STRING_LITERAL", "INT_LITERAL", "PROGRAM", "BEGIN", 
			"END", "FUNCTION", "PROCEDURE", "EXTERNAL", "FORWARD", "IF", "THEN", 
			"ELSE", "FOR", "TO", "DOWNTO", "WHILE", "REPEAT", "UNTIL", "DO", "CONST", 
			"TYPE", "VAR", "ARRAY", "RECORD", "OF", "DIV", "MOD", "AND", "OR", "NOT", 
			"ID", "LPAREN", "RPAREN", "LBRACK", "RBRACK", "SEMICOLON", "ASSIGN", 
			"COLON", "COMMA", "ELLIPSIS", "RANGE", "DOT", "CARET", "PLUS", "MINUS", 
			"TIMES", "EQUALS", "LEQ", "GEQ", "NEQ", "LT", "GT", "PASCAL_BRACE_COMMENT", 
			"PASCAL_PAREN_COMMENT", "WHITESPACE", "ERROR"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "RecafParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public RecafParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramContext extends ParserRuleContext {
		public Program_declContext program_decl() {
			return getRuleContext(Program_declContext.class,0);
		}
		public Main_blockContext main_block() {
			return getRuleContext(Main_blockContext.class,0);
		}
		public TerminalNode EOF() { return getToken(RecafParser.EOF, 0); }
		public List<DeclarationContext> declaration() {
			return getRuleContexts(DeclarationContext.class);
		}
		public DeclarationContext declaration(int i) {
			return getRuleContext(DeclarationContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RecafParserListener ) ((RecafParserListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RecafParserListener ) ((RecafParserListener)listener).exitProgram(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof RecafParserVisitor ) return ((RecafParserVisitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(94);
			program_decl();
			setState(98);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 14680448L) != 0)) {
				{
				{
				setState(95);
				declaration();
				}
				}
				setState(100);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(101);
			main_block();
			setState(102);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Program_declContext extends ParserRuleContext {
		public TerminalNode PROGRAM() { return getToken(RecafParser.PROGRAM, 0); }
		public TerminalNode ID() { return getToken(RecafParser.ID, 0); }
		public TerminalNode SEMICOLON() { return getToken(RecafParser.SEMICOLON, 0); }
		public Program_declContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program_decl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RecafParserListener ) ((RecafParserListener)listener).enterProgram_decl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RecafParserListener ) ((RecafParserListener)listener).exitProgram_decl(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof RecafParserVisitor ) return ((RecafParserVisitor<? extends T>)visitor).visitProgram_decl(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Program_declContext program_decl() throws RecognitionException {
		Program_declContext _localctx = new Program_declContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_program_decl);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(104);
			match(PROGRAM);
			setState(105);
			match(ID);
			setState(106);
			match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DeclarationContext extends ParserRuleContext {
		public Type_sectionContext type_section() {
			return getRuleContext(Type_sectionContext.class,0);
		}
		public Const_sectionContext const_section() {
			return getRuleContext(Const_sectionContext.class,0);
		}
		public Var_sectionContext var_section() {
			return getRuleContext(Var_sectionContext.class,0);
		}
		public Function_declContext function_decl() {
			return getRuleContext(Function_declContext.class,0);
		}
		public Procedure_declContext procedure_decl() {
			return getRuleContext(Procedure_declContext.class,0);
		}
		public DeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RecafParserListener ) ((RecafParserListener)listener).enterDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RecafParserListener ) ((RecafParserListener)listener).exitDeclaration(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof RecafParserVisitor ) return ((RecafParserVisitor<? extends T>)visitor).visitDeclaration(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DeclarationContext declaration() throws RecognitionException {
		DeclarationContext _localctx = new DeclarationContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_declaration);
		try {
			setState(113);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case TYPE:
				enterOuterAlt(_localctx, 1);
				{
				setState(108);
				type_section();
				}
				break;
			case CONST:
				enterOuterAlt(_localctx, 2);
				{
				setState(109);
				const_section();
				}
				break;
			case VAR:
				enterOuterAlt(_localctx, 3);
				{
				setState(110);
				var_section();
				}
				break;
			case FUNCTION:
				enterOuterAlt(_localctx, 4);
				{
				setState(111);
				function_decl();
				}
				break;
			case PROCEDURE:
				enterOuterAlt(_localctx, 5);
				{
				setState(112);
				procedure_decl();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Type_sectionContext extends ParserRuleContext {
		public TerminalNode TYPE() { return getToken(RecafParser.TYPE, 0); }
		public List<Type_declContext> type_decl() {
			return getRuleContexts(Type_declContext.class);
		}
		public Type_declContext type_decl(int i) {
			return getRuleContext(Type_declContext.class,i);
		}
		public List<TerminalNode> SEMICOLON() { return getTokens(RecafParser.SEMICOLON); }
		public TerminalNode SEMICOLON(int i) {
			return getToken(RecafParser.SEMICOLON, i);
		}
		public Type_sectionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_type_section; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RecafParserListener ) ((RecafParserListener)listener).enterType_section(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RecafParserListener ) ((RecafParserListener)listener).exitType_section(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof RecafParserVisitor ) return ((RecafParserVisitor<? extends T>)visitor).visitType_section(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Type_sectionContext type_section() throws RecognitionException {
		Type_sectionContext _localctx = new Type_sectionContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_type_section);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(115);
			match(TYPE);
			setState(116);
			type_decl();
			setState(117);
			match(SEMICOLON);
			setState(123);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==ID) {
				{
				{
				setState(118);
				type_decl();
				setState(119);
				match(SEMICOLON);
				}
				}
				setState(125);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Type_declContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(RecafParser.ID, 0); }
		public TerminalNode EQUALS() { return getToken(RecafParser.EQUALS, 0); }
		public Type_refContext type_ref() {
			return getRuleContext(Type_refContext.class,0);
		}
		public Type_declContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_type_decl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RecafParserListener ) ((RecafParserListener)listener).enterType_decl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RecafParserListener ) ((RecafParserListener)listener).exitType_decl(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof RecafParserVisitor ) return ((RecafParserVisitor<? extends T>)visitor).visitType_decl(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Type_declContext type_decl() throws RecognitionException {
		Type_declContext _localctx = new Type_declContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_type_decl);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(126);
			match(ID);
			setState(127);
			match(EQUALS);
			setState(128);
			type_ref();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Type_refContext extends ParserRuleContext {
		public Base_typeContext base_type() {
			return getRuleContext(Base_typeContext.class,0);
		}
		public Array_typeContext array_type() {
			return getRuleContext(Array_typeContext.class,0);
		}
		public Record_typeContext record_type() {
			return getRuleContext(Record_typeContext.class,0);
		}
		public Enum_typeContext enum_type() {
			return getRuleContext(Enum_typeContext.class,0);
		}
		public Pointer_typeContext pointer_type() {
			return getRuleContext(Pointer_typeContext.class,0);
		}
		public Type_refContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_type_ref; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RecafParserListener ) ((RecafParserListener)listener).enterType_ref(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RecafParserListener ) ((RecafParserListener)listener).exitType_ref(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof RecafParserVisitor ) return ((RecafParserVisitor<? extends T>)visitor).visitType_ref(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Type_refContext type_ref() throws RecognitionException {
		Type_refContext _localctx = new Type_refContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_type_ref);
		try {
			setState(135);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case ID:
				enterOuterAlt(_localctx, 1);
				{
				setState(130);
				base_type();
				}
				break;
			case ARRAY:
				enterOuterAlt(_localctx, 2);
				{
				setState(131);
				array_type();
				}
				break;
			case RECORD:
				enterOuterAlt(_localctx, 3);
				{
				setState(132);
				record_type();
				}
				break;
			case LPAREN:
				enterOuterAlt(_localctx, 4);
				{
				setState(133);
				enum_type();
				}
				break;
			case CARET:
				enterOuterAlt(_localctx, 5);
				{
				setState(134);
				pointer_type();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Base_typeContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(RecafParser.ID, 0); }
		public Base_typeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_base_type; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RecafParserListener ) ((RecafParserListener)listener).enterBase_type(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RecafParserListener ) ((RecafParserListener)listener).exitBase_type(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof RecafParserVisitor ) return ((RecafParserVisitor<? extends T>)visitor).visitBase_type(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Base_typeContext base_type() throws RecognitionException {
		Base_typeContext _localctx = new Base_typeContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_base_type);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(137);
			match(ID);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Array_typeContext extends ParserRuleContext {
		public TerminalNode ARRAY() { return getToken(RecafParser.ARRAY, 0); }
		public TerminalNode LBRACK() { return getToken(RecafParser.LBRACK, 0); }
		public List<Array_index_rangeContext> array_index_range() {
			return getRuleContexts(Array_index_rangeContext.class);
		}
		public Array_index_rangeContext array_index_range(int i) {
			return getRuleContext(Array_index_rangeContext.class,i);
		}
		public TerminalNode RBRACK() { return getToken(RecafParser.RBRACK, 0); }
		public List<TerminalNode> COMMA() { return getTokens(RecafParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(RecafParser.COMMA, i);
		}
		public TerminalNode OF() { return getToken(RecafParser.OF, 0); }
		public Type_refContext type_ref() {
			return getRuleContext(Type_refContext.class,0);
		}
		public Array_typeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_array_type; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RecafParserListener ) ((RecafParserListener)listener).enterArray_type(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RecafParserListener ) ((RecafParserListener)listener).exitArray_type(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof RecafParserVisitor ) return ((RecafParserVisitor<? extends T>)visitor).visitArray_type(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Array_typeContext array_type() throws RecognitionException {
		Array_typeContext _localctx = new Array_typeContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_array_type);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(139);
			match(ARRAY);
			setState(140);
			match(LBRACK);
			setState(141);
			array_index_range();
			setState(146);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(142);
				match(COMMA);
				setState(143);
				array_index_range();
				}
				}
				setState(148);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(149);
			match(RBRACK);
			setState(152);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==OF) {
				{
				setState(150);
				match(OF);
				setState(151);
				type_ref();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Array_index_rangeContext extends ParserRuleContext {
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public TerminalNode RANGE() { return getToken(RecafParser.RANGE, 0); }
		public Array_index_rangeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_array_index_range; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RecafParserListener ) ((RecafParserListener)listener).enterArray_index_range(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RecafParserListener ) ((RecafParserListener)listener).exitArray_index_range(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof RecafParserVisitor ) return ((RecafParserVisitor<? extends T>)visitor).visitArray_index_range(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Array_index_rangeContext array_index_range() throws RecognitionException {
		Array_index_rangeContext _localctx = new Array_index_rangeContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_array_index_range);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(154);
			expr(0);
			setState(155);
			match(RANGE);
			setState(156);
			expr(0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Record_typeContext extends ParserRuleContext {
		public TerminalNode RECORD() { return getToken(RecafParser.RECORD, 0); }
		public Var_declsContext var_decls() {
			return getRuleContext(Var_declsContext.class,0);
		}
		public TerminalNode END() { return getToken(RecafParser.END, 0); }
		public Record_typeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_record_type; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RecafParserListener ) ((RecafParserListener)listener).enterRecord_type(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RecafParserListener ) ((RecafParserListener)listener).exitRecord_type(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof RecafParserVisitor ) return ((RecafParserVisitor<? extends T>)visitor).visitRecord_type(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Record_typeContext record_type() throws RecognitionException {
		Record_typeContext _localctx = new Record_typeContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_record_type);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(158);
			match(RECORD);
			setState(159);
			var_decls();
			setState(160);
			match(END);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Enum_typeContext extends ParserRuleContext {
		public TerminalNode LPAREN() { return getToken(RecafParser.LPAREN, 0); }
		public Id_listContext id_list() {
			return getRuleContext(Id_listContext.class,0);
		}
		public TerminalNode RPAREN() { return getToken(RecafParser.RPAREN, 0); }
		public Enum_typeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_enum_type; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RecafParserListener ) ((RecafParserListener)listener).enterEnum_type(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RecafParserListener ) ((RecafParserListener)listener).exitEnum_type(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof RecafParserVisitor ) return ((RecafParserVisitor<? extends T>)visitor).visitEnum_type(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Enum_typeContext enum_type() throws RecognitionException {
		Enum_typeContext _localctx = new Enum_typeContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_enum_type);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(162);
			match(LPAREN);
			setState(163);
			id_list();
			setState(164);
			match(RPAREN);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Pointer_typeContext extends ParserRuleContext {
		public TerminalNode CARET() { return getToken(RecafParser.CARET, 0); }
		public Base_typeContext base_type() {
			return getRuleContext(Base_typeContext.class,0);
		}
		public Pointer_typeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_pointer_type; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RecafParserListener ) ((RecafParserListener)listener).enterPointer_type(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RecafParserListener ) ((RecafParserListener)listener).exitPointer_type(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof RecafParserVisitor ) return ((RecafParserVisitor<? extends T>)visitor).visitPointer_type(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Pointer_typeContext pointer_type() throws RecognitionException {
		Pointer_typeContext _localctx = new Pointer_typeContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_pointer_type);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(166);
			match(CARET);
			setState(167);
			base_type();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
